overlays/development-monitoring/ops/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - meet.sentryhealth.ca
    secretName: jitsi-messenger-schule-tls
  rules:
    - host: meet.sentryhealth.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: haproxy
              servicePort: 80
